# inspire-mitmproxy

./: .gitignore  .travis.yml  Dockerfile  MANIFEST.in  README.md  README.rst  architecture.html  changelog.html  docker-compose.yaml  dockerhub-deploy.sh  entrypoint.py  genindex.html  index.html  mitmproxy-ca.pem  objects.inv  py-modindex.html  requirements-docs.txt  run-tests.sh  search.html  searchindex.js  setup.cfg  setup.py
_apidoc/: inspire_mitmproxy.html  inspire_mitmproxy.services.html  modules.html
_sources/: changelog.rst.txt
_sources/_apidoc/: inspire_mitmproxy.rst.txt  inspire_mitmproxy.services.rst.txt  modules.rst.txt
docs/: Makefile  architecture.rst  conf.py  index.rst  interaction.rst  intro.rst
inspire_mitmproxy/: __init__.py  base_service.py  dispatcher.py  errors.py  http.py  interaction.py  management_service.py  service_list.py  translator.py  whitelist_service.py
inspire_mitmproxy/http/: __init__.py  headers.py  request.py  response.py  utils.py
inspire_mitmproxy/services/: __init__.py  arxiv_service.py  base_service.py  legacy_service.py  management_service.py  rt_service.py  whitelist_service.py
scripts/: publish_docs.sh  vcr_convert.py
tests/integration/: __init__.py  test_base_service.py  test_integration_base_service.py  test_integration_management_service.py  test_interaction.py  test_management_service.py  test_whitelist_service.py
tests/integration/fixtures/: test_interaction_callback.yaml
tests/integration/fixtures/scenarios/test_scenario1/TestServiceA/: 0.yaml
tests/integration/fixtures/scenarios/test_scenario1/TestServiceB/: 0.yaml
tests/integration/fixtures/scenarios/test_scenario2/TestServiceA/: 0.yaml  interaction_0.yaml
tests/integration/fixtures/scenarios/test_scenario_raise_if_no_interaction/TestServiceA/: interaction_0.yaml
tests/unit/: __init__.py  test_base_service.py  test_dispatcher.py  test_http_headers.py  test_http_request.py  test_http_response.py  test_http_utils.py  test_interaction.py  test_management_service.py  test_service_list.py  test_translator.py  test_whitelist_service.py
tests/unit/fixtures/: test_interaction_detailed.yaml  test_interaction_partial_matches.yaml  test_interaction_simple.yaml
(+9 files in other folders)
