# -*- coding: utf-8 -*-
#
# This file is part of INSPIRE-MITMPROXY.
# Copyright (C) 2018 CERN.
#
# INSPIRE is free software: you can redistribute it and/or modify
# it under the terms of the GNU General Public License as published by
# the Free Software Foundation, either version 3 of the License, or
# (at your option) any later version.
#
# INSPIRE is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the
# GNU General Public License for more details.
#
# You should have received a copy of the GNU General Public License
# along with INSPIRE. If not, see <http://www.gnu.org/licenses/>.
#
# In applying this license, CERN does not waive the privileges and immunities
# granted to it by virtue of its status as an Intergovernmental Organization
# or submit itself to any jurisdiction.

# Packaging

[metadata]
name = inspire-mitmproxy
author = CERN
author_email = admin@inspirehep.net
license = GPLv3
platforms = any
classifiers =
    Intended Audience :: Developers
    Environment :: Console
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Topic :: Internet :: WWW/HTTP
    Topic :: Software Development :: Libraries :: Application Frameworks
    Topic :: Software Development :: Libraries :: Python Modules
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6

[options]
zip_safe = False
include_package_data = True
packages = find:
scripts = scripts/vcr_convert.py

[options.package_data]
* = AUTHORS, CHANGELOG, entrypoint.py


# Tests

[coverage:run]
include = inspire_mitmproxy/*.py

[tool:pytest]
addopts = --cov=inspire_mitmproxy --cov-report=term-missing:skip-covered

[flake8]
max-line-length = 100
ignore = *.py FI12 FI14 FI15 FI16 FI17 FI50 FI51 FI53 W503

[isort]
default_section = THIRDPARTY
known_first_party = inspire_mitmproxy
line_length = 100
multi_line_output = 3
sections = FUTURE,STDLIB,THIRDPARTY,FIRSTPARTY,LOCALFOLDER
skip = .eggs
lines_after_imports = 2
